tests/snapshots/runtime_error_fixtures/division_by_zero_modulo.snap
---
source: tests/error_fixtures/runtime_error_fixtures_snapshots.rs
---
Fixture: examples/runtime_errors/division_by_zero_modulo.flx
== vm ==
status: 1
stdout:
<empty>
stderr:
[ 1 of 10] Compiling  Assert
[ 2 of 10] Compiling  Array
[ 3 of 10] Compiling  List
[ 4 of 10] Compiling  Either
[ 5 of 10] Compiling  IO
[ 6 of 10] Compiling  Math
[ 7 of 10] Compiling  Numeric
[ 8 of 10] Compiling  Option
[ 9 of 10] Compiling  String
[10 of 10] Compiling  division_by_zero_modulo
[cfg→vm] Running via CFG → bytecode VM backend...
• 1 error • examples/runtime_errors/division_by_zero_modulo.flx
error[E1008]: Division By Zero

Cannot divide by zero.

  examples/runtime_errors/division_by_zero_modulo.flx:2:19
  |
2 |     let ignored = 10 % 0
  |                   ^^^^^^

Hint:
  Check divisor is non-zero before division.

Stack trace:
  at main (examples/runtime_errors/division_by_zero_modulo.flx:2:19)
  at <main>
